--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,5 @@
 {
-  "extends": "eslint-config-egg"
+  "extends": ["eslint-config-egg"],
+  "array-bracket-spacing": ["error", "always", { "objectsInArrays": false }]
 }
+  
