--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "declarations": true
   },
   "dependencies": {
-    "egg": "^2.15.1",
+    "egg": "^2.36.0",
     "egg-mysql": "^3.0.0",
     "egg-scripts": "^2.11.0",
+    "egg-sequelize": "^6.0.0",
     "egg-socket.io": "^4.1.6",
     "egg-view-nunjucks": "^2.2.0",
-    "mongodb": "^3.5.9"
+    "moment": "^2.29.3",
+    "mongodb": "^3.5.9",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.21.2"
   },
   "devDependencies": {
     "autod": "^3.0.1",
@@ -21,13 +25,14 @@
     "egg-ci": "^1.11.0",
     "egg-mock": "^3.21.0",
     "eslint": "^5.13.0",
-    "eslint-config-egg": "^7.1.0"
+    "eslint-config-egg": "^7.1.0",
+    "sequelize-cli": "^6.4.1"
   },
   "engines": {
     "node": ">=10.0.0"
   },
   "scripts": {
-    "start": "egg-scripts start --sticky --port=7002 --daemon --title=egg-server-egg-demo",
+    "start": "egg-scripts start --sticky --port=7003 --daemon --title=egg-server-egg-demo",
     "stop": "egg-scripts stop --title=egg-server-egg-demo",
     "dev": "egg-bin dev --sticky --port=7002 --works=2",
     "debug": "egg-bin debug",
