--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js egg CI
+name: Node.js CI
 
 on:
   push:
@@ -31,10 +31,10 @@ jobs:
         node-version: ${{ matrix.node-version }}
 
     - name: Install Dependencies
-      run: npm i
+      run: npm i -g npminstall && npminstall
 
     - name: Continuous Integration
-      run: npm run dev
+      run: npm run ci
 
     - name: Code Coverage
       uses: codecov/codecov-action@v1
